fixed horizontal scroll

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,3 +1,7 @@
+html {
+    overflow-x: hidden;
+}
+
 body {
     overflow-x: hidden;
     margin: 0; /*need these for when background image is inside div to remove the gap*/
@@ -222,9 +226,6 @@ section {
         height: 30rem;
     }
 
-    /* body, .sec-1, .sec-2, .sec-3, .sec-4 {
-        background-attachment: scroll;
-    } */
 
 }
 
